<resources>
    <string name="adicionar">Adicionar</string>
    <string name="agenda">Agenda</string>
    <string name="agendar">Agendar</string>
    <string name="agendar_equipamento">Agendar equipamento</string>
    <string name="agendar_paciente">Agendar paciente</string>
    <string name="anamnese">Anamnese</string>
    <string name="anamnese_depressao">Anamnese Depressão</string>
    <string name="anamnese_panico">Anamnese Síndrome do Pânico</string>
    <string name="anamnese_autismo">Anamnese Autismo</string>
    <string name="anamnese_dor">Anamnese Dor Crônica</string>
    <string name="anamnese_outros">Anamnese Outros</string>
    <string name="app_name">Reac Nathuris</string>
    <string name="autismo">Autismo</string>
    <string name="bairro">Bairro</string>
    <string name="cadastros">Cadastros</string>
    <string name="CEP">CEP</string>
    <string name="CPF">CPF</string>
    <string name="cidade">Cidade</string>
    <string name="complemento">Complemento</string>
    <string name="confirme_senha">Confirme sua Senha</string>
    <string name="controle_financeiro">Controle Financeiro</string>
    <string name="dados_responsável">Dados do Responsável</string>
    <string name="data_atendimento">Data do Atendimento</string>
    <string name="data_lancamento">Data do Lançamento</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="depressao">Depressão</string>
    <string name="descricao">Descrição</string>
    <string name="digite_valor">Digite o valor</string>
    <string name="incluir_despesas">Incluir Despesas</string>
    <string name="dor_cronica">Dor crônica</string>
    <string name="editar">Editar</string>
    <string name="email">Email</string>
    <string name="endereco">Endereço</string>
    <string name="entrar">Entrar</string>
    <string name="excluir">Excluir</string>
    <string name="fila">Fila de Atendimento</string>
    <string name="follow">Follow-Up</string>
    <string name="fone">Fone</string>
    <string name="hora_atendimento">Horário do Atendimento</string>
    <string name="impostos">Impostos para subtrair</string>
    <string name="intervalo_entre_aplicações">Intervalo min entre aplicações</string>
    <string name="intervalo_entre_tratamentos">Intervalo entre tratamentos (meses)</string>
    <string name="intervalo_min_dias">Intervalo min entre dias</string>
    <string name="ir_complemento">Ir para complemento</string>
    <string name="juros">Juros para subtrair</string>
    <string name="login">Login</string>
    <string name="menu">Menu</string>
    <string name="nome">Nome</string>
    <string name="nome_protocolo">Nome do Protocolo</string>
    <string name="nome_responsavel">Nome do Responsável</string>
    <string name="nome_unidade">Nome da Unidade</string>
    <string name="novo_usuario">Novo usuário</string>
    <string name="numero">Nº</string>
    <string name="numero_max_dia">Número max aplic dia</string>
    <string name="numero_total_aplic_protocol">Total de aplicações do tratamento</string>
    <string name="outros">Outros</string>
    <string name="pacientes">Pacientes</string>
    <string name="paciente_diagnosticado">Paciente diagnosticado com...</string>
    <string name="panico">Síndrome do Pânico</string>
    <string name="porcentagem_rateio">Porcentagem rateio</string>
    <string name="protocolos">Protocolos</string>
    <string name="incluir_receitas">Incluir Receitas</string>
    <string name="registrar">Registrar</string>
    <string name="registros_vendas">Registros de Vendas</string>
    <string name="resultado">Resultado</string>
    <string name="salvar">Salvar</string>
    <string name="senha">Senha</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="unidades">Unidades de Atendimento</string>
    <string name="valor_liquido">Valor Líquido</string>
    <string name="voltar_anamnese">Menu anamnese</string>
    <string name="voltar_menu">Menu geral</string>
</resources>
