<?xml version="1.0" encoding="utf-8"?>
<CalendarView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calendar"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <Button
        android:id="@+id/btn_agendar_paciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/login_background_button"
        android:text="@string/agendar_paciente"
        android:textColor="@color/colorTextWhite" />

    <Button
        android:id="@+id/btn_agendar_equipamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="416dp"
        android:background="@drawable/login_background_button"
        android:text="@string/agendar_equipamento"
        android:textColor="@color/colorTextWhite" />

    <Button
        android:id="@+id/btn_voltar_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="482dp"
        android:background="@drawable/login_background_button"
        android:text="@string/menu"
        android:textColor="@color/colorTextWhite" />


    </CalendarView>


